<resources>
    <string name="app_name">EduApp</string>
    <string name="title_home">Home</string>
    <string name="title_grades">Grades</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="recent_grades">Recent Grades</string>
    <string name="subjects_taught">Subjects Taught</string>
    <string name="change_language">Switch to Spanish</string>
    <string name="no_data">No data available</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="welcome_title">Welcome to EduApp</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="start_button">Get Started</string>
    <string name="welcome_user">Welcome, %s!</string>
</resources>